--- a/theme/exhibit.html
+++ b/theme/exhibit.html
@@ -16,7 +16,6 @@
   <style>
 ::selection {background: #d7d1b9; color: #2d2d2f; text-shadow: none;}
 </style>
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <style>
 .w-slider-dot {
 	background: white;
@@ -154,7 +153,7 @@ $("#card-button").click(function(){
       </div>
     </div>
     <div class="carousel-container overflow">
-      <div class="splide slider2 tall overflow">
+      <div class="splide slider2 tall">
         {%- assign collection = collections.categories | sort: "-created-on" -%}<div class="splide__track w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="splide__list test w-dyn-items">
             {%- for item in collection -%}<div role="listitem" class="splide__slide five-cards test w-dyn-item">
@@ -165,7 +164,7 @@ $("#card-button").click(function(){
                     <h2 class="blue">{{ texts.a1ba2ae }}</h2>
                     {%- assign exhibitorsOfCategories = item.data.f_exhibitors | resolveMultiReferences -%}<div id="w-node-e848cd1e-7a65-0172-e732-56220ded8a9f-a60c874a" class="exhibitors-list-wrapper w-dyn-list">
                       {%- unless exhibitorsOfCategories.length == 0 -%}<div role="list" class="exhibitors-list w-dyn-items">
-                        {%- for item in exhibitorsOfCategories -%}<div id="w-node-e848cd1e-7a65-0172-e732-56220ded8aa1-a60c874a" role="listitem" class="exhibitor-item w-dyn-item"><img src="{{ item.data.f_exhibitor-logo.url }}" loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" alt="{{ item.data.f_exhibitor-logo.alt }}" class="list-exhibitor-logo"></div>{%- endfor -%}
+                        {%- for item in exhibitorsOfCategories -%}<div id="w-node-e848cd1e-7a65-0172-e732-56220ded8aa1-a60c874a" role="listitem" class="exhibitor-item w-dyn-item"><img loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{{ item.data.f_exhibitor-logo.url }}" alt="{{ item.data.f_exhibitor-logo.alt }}" class="list-exhibitor-logo"></div>{%- endfor -%}
                       </div>{%- endunless -%}
                     </div>
                   </div>
@@ -351,9 +350,6 @@ $("#card-button").click(function(){
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="https://weblocks.io/library.js"></script>
-  <script src="https://weblocks.io/script-66-529.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.2.2/dist/js/splide.min.js"></script>
   <script>
 function slider1() {
@@ -404,6 +400,7 @@ for ( let i = 0, splideLength = splides.length; i < splideLength; i++ ) {
   // Desktop on down
 	perPage: 3,
 	perMove: 1,
+  isNavigation: true,
   focus: 'center', // 0 = left and 'center' = center
   type: 'loop', // 'loop' or 'slide'
   gap: '1em', // space between slides
