--- a/theme/exhibit.html
+++ b/theme/exhibit.html
@@ -437,4 +437,4 @@ for ( let i = 0, splideLength = splides.length; i < splideLength; i++ ) {
 slider2();
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.1/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
