--- a/theme/exhibit.html
+++ b/theme/exhibit.html
@@ -345,7 +345,25 @@ $("#card-button").click(function(){
       </div>
     </div>
   </header>
-  {%- include "partials/contact-form" -%}
+  <div class="form-section yellow wf-section">
+    <div class="container-wrapper">
+      <div class="container w-container">
+        <div class="narrow-section-items-wrapper">
+          <h1 class="centered blue">{{ texts.6a3b57a }}</h1>
+          <h3 class="blue centered">{{ texts.-40024ee2 }}</h3>
+          <div id="contact" class="form-block w-form">
+            <form id="wf-form-Email-Form-2" name="wf-form-Email-Form-2" data-name="email_2" method="get" class="contact-form" data-netlify="true" data-ajax="true" data-content-type="application/x-www-form-urlencoded"><input type="text" class="text-field w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="Name" id="name-2"><input type="email" class="text-field w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Email" id="Email-2"><input type="tel" class="text-field w-input" maxlength="256" name="Mobile-2" data-name="Mobile 2" placeholder="Mobile" id="Mobile-2"><input type="text" class="text-field w-input" maxlength="256" name="Country-of-Origin-2" data-name="Country Of Origin 2" placeholder="Country of Origin" id="Country-of-Origin-2"><textarea id="Message-2" name="Message-2" maxlength="5000" data-name="Message 2" placeholder="Message" class="text-field large w-input"></textarea><input type="submit" value="Send Request →" data-wait="Please wait..." class="cta-button blue margin-top w-button"></form>
+            <div class="w-form-done">
+              <div>{{ texts.5a0ea5a1 }}</div>
+            </div>
+            <div class="w-form-fail">
+              <div>{{ texts.-7c112e99 }}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   {%- include "partials/footer" -%}
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/webflow.js" type="text/javascript"></script>
@@ -437,4 +455,4 @@ for ( let i = 0, splideLength = splides.length; i < splideLength; i++ ) {
 slider2();
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.1/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
