--- a/theme/about.html
+++ b/theme/about.html
@@ -120,7 +120,7 @@
       </div>
     </div>
   </div>
-  <div class="form-section yellow wf-section">
+  <div class="form-section yellow hidden wf-section">
     <div class="container-wrapper">
       <div class="container w-container">
         <div class="narrow-section-items-wrapper">
@@ -229,4 +229,4 @@ for ( let i = 0, splideLength = splides.length; i < splideLength; i++ ) {
 slider2();
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.1/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
