Revert "Files committed from Adapter on Fri Feb 17 2023"
This reverts commit 27508261981e8fdd80ec2cd6a25ac0b59ea28135.

--- a/theme/about.html
+++ b/theme/about.html
@@ -120,7 +120,7 @@
       </div>
     </div>
   </div>
-  <div class="form-section yellow hidden wf-section">
+  <div class="form-section yellow wf-section">
     <div class="container-wrapper">
       <div class="container w-container">
         <div class="narrow-section-items-wrapper">
