--- a/theme/index.html
+++ b/theme/index.html
@@ -106,7 +106,7 @@
         <div class="narrow-section-items-wrapper">
           <h1 class="blue centered">{{ texts.-55ff3a20 }}</h1>
           <h3 class="blue centered">{{ texts.898e69d }}</h3>
-          <a href="{{ links.23 }}" class="cta-button w-button">{{ texts.595b8029 }}<strong>{{ texts.2192 }}</strong></a>
+          <a href="{{ links.-3c231376 }}" class="cta-button w-button">{{ texts.595b8029 }}<strong>{{ texts.2192 }}</strong></a>
         </div>
       </div>
     </div>
@@ -117,4 +117,4 @@
   <script src="/assets/js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script>window.netlifyIdentity&&window.netlifyIdentity.on("init",a=>{a||window.netlifyIdentity.on("login",()=>{document.location.href="/admin/"})});</script></body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script>window.netlifyIdentity&&window.netlifyIdentity.on("init",a=>{a||window.netlifyIdentity.on("login",()=>{document.location.href="/admin/"})});</script><script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.1/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
