--- a/theme/index.html
+++ b/theme/index.html
@@ -45,7 +45,7 @@
         <div class="narrow-section-items-wrapper">
           <h1 class="blue">{{ texts.-150152bf }}</h1>
           <h3 class="blue centered">{{ texts.2c96343e }}</h3>
-          <a href="{{ links.23 }}" class="cta-button w-button">{{ texts.-4bffc06d }}</a>
+          <a href="{{ links.55b8e8be }}" class="cta-button w-button">{{ texts.-4bffc06d }}</a>
         </div>
       </div>
     </div>
@@ -117,4 +117,4 @@
   <script src="/assets/js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script>window.netlifyIdentity&&window.netlifyIdentity.on("init",a=>{a||window.netlifyIdentity.on("login",()=>{document.location.href="/admin/"})});</script></body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script>window.netlifyIdentity&&window.netlifyIdentity.on("init",a=>{a||window.netlifyIdentity.on("login",()=>{document.location.href="/admin/"})});</script><script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.1/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
